--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- For Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     <title>Eric Scroggins</title>
   </head>
   <body>
