--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     -->
     <!-- For Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
+	<script>
+		require('dotenv').config()
+	</script>
     <title>Eric Scroggins</title>
   </head>
   <body>
