--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     -->
     <!-- For Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script></script>
 	<script>
 		require('dotenv').config()
 	</script>
